k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensource-tracker
  namespace: opensource-tracker
spec:
  selector:
    app: opensource-tracker
  ports:
    - port: 80
      targetPort: 3000
